<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
    	android:id="@+id/sns_main_into_text"
    	android:text="@string/sns_main_menu"
    	android:layout_width="fill_parent"
		android:textStyle="bold"
		android:textColor="#ffe3ce08"
    	android:layout_height="40dip"
    	android:gravity="center"
    	/>
    <Button 
		android:id="@+id/sns_main_create_button"
		android:text="@string/create_topic"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sns_main_delete_button"
		android:text="@string/delete_topic"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sns_main_topic_list_button"
		android:text="@string/list_topics"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sns_main_subscriber_list_button"
		android:text="@string/list_all_subscribers"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sns_main_subscribe_button"
		android:text="@string/subscribe_to_topic"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sns_main_publish_button"
		android:text="@string/publish_to_topic"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
		
</LinearLayout>
