<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
    	android:id="@+id/main_into_text"
    	android:text="@string/loading_"
    	android:layout_width="fill_parent"
		android:textStyle="bold"
		android:textColor="#ffe3ce08"
    	android:layout_height="40dip"
    	android:gravity="center"
    	/>
	<Button 
		android:id="@+id/main_notify_button"
		android:text="@string/simple_notifications_sns_"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		/>
	<Button 
		android:id="@+id/main_queue_button"
		android:text="@string/simple_queue_sqs"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		/>	
	<Button 
		android:id="@+id/main_storage_button"
		android:text="@string/simple_storage_s3"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		/>
	<Button 
		android:id="@+id/main_sdb_button"
		android:text="@string/simple_database_sdb"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		/>
	<Button 
		android:id="@+id/main_logout_button"
		android:text="@string/logout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		/>
	<Button 
		android:id="@+id/main_login_button"
		android:text="@string/login"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		/>
    <TextView
    	android:id="@+id/main_subtitle_text"
    	android:text="@string/_tvm_identity_"
    	android:layout_width="fill_parent"
    	android:layout_height="20dip"
		android:textColor="#ffe3ce08"
    	android:gravity="center"
    	/>
</LinearLayout>
