<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
    	android:id="@+id/sqs_main_into_text"
    	android:text="@string/sqs_main_menu"
    	android:layout_width="fill_parent"
		android:textStyle="bold"
		android:textColor="#ffe3ce08"
    	android:layout_height="40dip"
    	android:gravity="center"
    	/>
	<Button 
		android:id="@+id/sqs_create_queue_button"
		android:text="@string/create_queue"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sqs_list_queues_button"
		android:text="@string/view_queues"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button
		android:id="@+id/sqs_delete_queue_button"
		android:text="@string/delete_queue"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sqs_send_message_button"
		android:text="@string/send_message_to_queue"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
</LinearLayout>
