<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
    	android:id="@+id/sdb_main_into_text"
    	android:text="@string/sdb_main_menu"
    	android:layout_width="fill_parent"
		android:textStyle="bold"
		android:textColor="#ffe3ce08"
    	android:layout_height="40dip"
    	android:gravity="center"
    	/>
	<Button 
		android:id="@+id/sdb_main_create_domain_button"
		android:text="@string/create_domain"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sdb_main_create_item_button"
		android:text="@string/create_item"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<Button 
		android:id="@+id/sdb_main_view_domains_button"
		android:text="@string/view_domains"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
</LinearLayout>
